<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_time"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sila.brasfootmobile.Time"
    android:background="@drawable/campo">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="2dp">

        <TextView
            android:text="@string/time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvNomeClube"
            android:textSize="24sp"
            android:textAlignment="center" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/goleiro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvGoleiros"
                android:textSize="18sp"
                android:layout_weight="1" />

            <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvQuantGoleiros"
                android:layout_weight="1" />
        </LinearLayout>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:id="@+id/lvGoleiros" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/atacantes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvAtacantes"
                android:textSize="18sp"
                android:layout_weight="1" />

            <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvQuantAtacantes"
                android:layout_weight="1" />
        </LinearLayout>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:id="@+id/lvAtacantes">

        </ListView>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/meiocampos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvMeioCampos"
                android:textSize="18sp"
                android:layout_weight="1" />

            <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvQuantMeioCampos"
                android:layout_weight="1" />
        </LinearLayout>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:id="@+id/lvMeioCampos" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/defensores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvDefensores"
                android:textSize="18sp"
                android:layout_weight="1" />

            <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvQuantDefensores"
                android:layout_weight="1" />
        </LinearLayout>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:id="@+id/lvDefensores" />

    </LinearLayout>

    <Button
        android:text="@string/salvar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btSalvar"
        android:onClick="salvarTime"
        android:background="@color/primary"
        android:textColor="@color/icons"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
